<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/voidlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/fcfsg"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/sstfg"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/clookg"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/cscang"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/scanrg"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/scanlg"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/lookrg"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/looklg"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/mixg"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fcfs"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_primary"
        android:hint="@string/FCFSBut"
        android:onClick="fcfsalgo"
        android:textColor="#F80404"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sstf"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="130dp"
        android:background="@drawable/round_primary"
        android:hint="@string/SSTFBut"
        android:onClick="sstfalgo"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fcfs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/look"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/round_primary"
        android:hint="@string/LookBut"
        android:onClick="lookalgo"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fcfs" />

    <Button
        android:id="@+id/scan"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_primary"
        android:hint="@string/ScanBut"
        android:onClick="scanalgo"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sstf"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clook"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/round_primary"
        android:hint="@string/CLOOKBUT"
        android:onClick="clookalgo"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/look"
        app:layout_constraintTop_toBottomOf="@+id/sstf" />

    <Button
        android:id="@+id/cscan"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/round_primary"
        android:hint="@string/CSCANBUT"
        android:onClick="cscanalgo"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clook"
        app:layout_constraintTop_toBottomOf="@+id/scan" />

    <TextView
        android:id="@+id/seekc"
        android:layout_width="409dp"
        android:layout_height="136dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fcfsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekq"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/seekq"
        android:layout_width="0dp"
        android:layout_height="107dp"
        android:layout_marginTop="288dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rightbut"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_primary"
        android:text="RIGHT"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/leftbut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/look" />

    <Button
        android:id="@+id/leftbut"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_primary"
        android:text="LEFT"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rightbut"
        app:layout_constraintTop_toBottomOf="@+id/cscan" />

    <Button
        android:id="@+id/mix"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/round_primary"
        android:text="Compare"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/seekq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>